<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view"
    android:background="@drawable/background"
    tools:context=".SignIn">

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
...
        android:text="@string/choose_as_which_user_you_enter"
        android:textColor="@color/black" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RadioGroup"
        android:layout_below="@+id/txtUser"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAlignment="center"
        android:orientation="vertical">
...
            android:gravity="center"
            android:textAlignment="center"
            android:checked="true"
            android:text="@string/looking_for_job"

            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_LFE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/looking_for_employees"
...

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/socialicons"
        android:text="@string/or_sign_in_with" />


    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:id="@+id/sign_in_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            tools:ignore="ContentDescription" />

...
