<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navButtons"
    android:background="@drawable/graybackground"
    android:layout_alignParentBottom="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/btnProfile"
            android:src="@drawable/line"
            app:tint="#E4DDDD" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/btnProfile"
            android:scaleType="fitXY"
            app:tint="#E4DDDD"
            android:src="@drawable/line" />

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"

            android:src="@drawable/image_button_selector_home" />

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/image_button_selector_profile" />

        <ImageButton
            android:id="@+id/btnAbout"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/image_button_selector_about" />


    </RelativeLayout>
</FrameLayout>