...
    android:background="#E4ECEC"
    tools:context=".About">



    <Button
        android:id="@+id/btnReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF5722"
        android:text="@string/report_of_user"
...
