...
    <string name="Your_Looking_For_Employees">Your Looking For Employees</string>
    <string name="Your_Manager_of_The_App">Your Manager of The App</string>
    <string name="publish_a_job">Publish A Job</string>
    <string name="there_is">\"There is: \"</string>
    <string name="cvsforyou">\" Cvs For You\"</string>
    <string name="Cv_sent_successfully">Cv sent successfully</string>
    <string name="exit_user">Exit User</string>
    <string name="jobnotfound">Job Not Found</string>
    <string name="Amount_of_Jobs_Found">\"Amount of Jobs Found: \"</string>
    <string name="Job_Not_Found">Job Not Found</string>
    <string name="sign_up">sign up</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="choose_as_which_user_you_enter">Choose as Which User you Enter</string>
    <string name="looking_for_job">Looking For Job</string>
    <string name="looking_for_employees">Looking For Employees</string>
    <string name="app_manager">App Manager</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="enter_pdf_file_name">Enter PDF file name</string>
    <string name="view_pdf">View PDF</string>
    <string name="Delete_Watch">Delete/Watch</string>
    <string name="Watch_or_Delete_File">Watch or Delete File:</string>
    <string name="Delete_All_Files">Delete All Files?</string>
    <string name="Files_Delete_successfully">Files Delete successfully</string>
    <string name="Yo_want_to_see_this_File">You want to see this File?</string>
    <string name="You_want_to_see_this_File">You want to see this File?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register">register</string>
    <string name="Go_To_login">Go To login</string>
    <string name="Cv_was_already_sent">Cv was already sent</string>
    <string name="Cv_sent_successfully2">Cv sent successfully</string>
    <string name="Cv_already_sent">Cv already sent</string>
...
    <string name="other">other</string>
    <string name="exit">exit</string>
    <string name="post_report_successfully">Post Report successfully</string>
    <string name="with_reports_on_them">\ With Reports on them\</string>
    <string name="choose_reason_of_report_post">Choose Reason of Report Post</string>
    <string name="job_posted_successfully">job posted successfully</string>
    <string name="report_of_user">Report of User</string>
    <string name="enter_a_valid_email">Enter a valid Email</string>
    <string name="enter_a_valid_password">Enter a valid Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
...
