...



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:background="#E4ECEC"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
...
                        app:tint="@color/white"
                        tools:ignore="HardcodedText" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/LayoutPostJob"
                    android:layout_width="500dp"
                    android:layout_height="750dp"
                    android:layout_below="@+id/LayoutCv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
...
                        android:text="@string/agreement_info"
                        android:textColor="@color/white"
                        android:textSize="11sp" />


                    <Button
                        android:id="@+id/BtnUpJobApplied"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/BtnUpJobDesc"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#FF5722"
...
