...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4ECEC"
    tools:context=".ViewCvsApplys">

    <ListView
        android:id="@+id/listview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
